--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Acquire – AI Due Diligence Platform" />
+    <meta property="og:title" content="Acquire" />
     <meta property="og:description" content="Institutional-grade AI due diligence platform for sophisticated investors. Transform document analysis with enterprise security and precision." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
   </head>
 
   <body>
