--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Acquire" />
     <meta name="theme-color" content="#00008b" />
     <link rel="canonical" href="/" />
-    <link rel="icon" href="/lovable-uploads/32801df0-3105-4879-afde-7c180138cc4a.png" type="image/png" />
+    <link rel="icon" href="/lovable-uploads/thumbnail_6EF3FB90-6A8A-4B64-A2A6-69D9386F87AF.png" type="image/png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Acquire" />
     <meta property="og:description" content="Institutional-grade AI due diligence platform for sophisticated investors. Transform document analysis with enterprise security and precision." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/thumbnail_6EF3FB90-6A8A-4B64-A2A6-69D9386F87AF.png" />
 
     
   </head>
